string check updated